Add card recipe heading and styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 <body>
 
-    <h1>hello world</h1>
+  <section class="card-recipe">
+      <img class="card-recipe__img" src="./img/image-omelette.jpeg" alt="Image omelette" width="656" height="300">
+      <div class="card-recipe__info">
+        <h1 class="card-recipe__heading">Simple Omelette Recipe</h1>
+        <p class="card-recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+
   <script src="/js/index.js"></script>
 </body>
 </html>
