Add card recipe time section and styles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         <h1 class="card-recipe__heading">Simple Omelette Recipe</h1>
         <p class="card-recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
+        <div class="card-recipe__time">
+          <h2 class="card-recipe__time-heading">Preparation time</h2>
+          <ul class="card-recipe__time-list">
+            <li class="card-recipe__time-item">Total: Approximately 10 minutes</li>
+            <li class="card-recipe__time-item">Preparation: 5 minutes</li>
+            <li class="card-recipe__time-item">Cooking: 5 minutes</li>
+          </ul>
+        </div>
   <script src="/js/index.js"></script>
 </body>
 </html>
