Add card recipe ingredient section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
             <li class="card-recipe__time-item">Cooking: 5 minutes</li>
           </ul>
         </div>
+
+        <div class="card-recipe__ingredients">
+          <div class="card-recipe__ingredients-inner">
+            <h2 class="card-recipe__ingredients-heading">Ingredients</h2>
+            <ul class="card-recipe__ingredients-list">
+              <li class="card-recipe__ingredients-item">2-3 large eggs</li>
+              <li class="card-recipe__ingredients-item">Salt, to taste</li>
+              <li class="card-recipe__ingredients-item">Pepper, to taste</li>
+              <li class="card-recipe__ingredients-item">1 tablespoon of butter or oil</li>
+              <li class="card-recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+            </ul>
+          </div>
+        </div>
+
   <script src="/js/index.js"></script>
 </body>
 </html>
