Add card recipe instruction section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Recipe Omelette</title>
 
   <!-- STYLESHEETS -->
   <link rel="stylesheet" href="./css/normalize.css">
@@ -40,6 +40,28 @@
           </div>
         </div>
 
+        <div class="card-recipe__instructions">
+          <div class="card-recipe__instructions-inner">
+            <h2 class="card-recipe__instructions-heading">Instructions</h2>
+            <ol class="card-recipe__instructions-list">
+              <li class="card-recipe__instructions-item">
+                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</p></li>
+              <li class="card-recipe__instructions-item">
+                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</p></li>
+              <li class="card-recipe__instructions-item">
+                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</p></li>
+              <li class="card-recipe__instructions-item">
+                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</p></li>
+              <li class="card-recipe__instructions-item">
+                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</p></li>
+              <li class="card-recipe__instructions-item">
+                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</p></li>
+            </ol>
+          </div>
+        </div>
+
+      </div>
+  </section>
   <script src="/js/index.js"></script>
 </body>
 </html>
