Add card recipe nutrition section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@
           </div>
         </div>
 
+        <div class="card-recipe__nutrition">
+          <h2 class="card-recipe__nutrition-heading">Nutrition</h2>
+          <p class="card-recipe__nutrition-description">The table below shows nutritional values per serving without the additional fillings.</p>
+
+          <table class="card-recipe__nutrition-table">
+            <tr class="card-recipe__nutrition-row">
+              <th class="card-recipe__nutrition-title">Calories</th>
+              <td class="card-recipe__nutrition-info">277ckal</td>
+            </tr>
+
+            <tr class="card-recipe__nutrition-row">
+              <th class="card-recipe__nutrition-title">Carbs</th>
+              <td class="card-recipe__nutrition-info">0g</td>
+            </tr>
+
+            <tr class="card-recipe__nutrition-row">
+              <th class="card-recipe__nutrition-title">Protein</th>
+              <td class="card-recipe__nutrition-info">20g</td>
+            </tr>
+
+            <tr class="card-recipe__nutrition-row">
+              <th class="card-recipe__nutrition-title">Fat</th>
+              <td class="card-recipe__nutrition-info">22g</td>
+            </tr>
+          </table>
+        </div>
+
       </div>
   </section>
   <script src="/js/index.js"></script>
