Add responsive styles

--- a/index.html
+++ b/index.html
@@ -14,79 +14,73 @@
 
   <section class="card-recipe">
       <img class="card-recipe__img" src="./img/image-omelette.jpeg" alt="Image omelette" width="656" height="300">
-      <div class="card-recipe__info">
-        <h1 class="card-recipe__heading">Simple Omelette Recipe</h1>
-        <p class="card-recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-        <div class="card-recipe__time">
-          <h2 class="card-recipe__time-heading">Preparation time</h2>
-          <ul class="card-recipe__time-list">
-            <li class="card-recipe__time-item">Total: Approximately 10 minutes</li>
-            <li class="card-recipe__time-item">Preparation: 5 minutes</li>
-            <li class="card-recipe__time-item">Cooking: 5 minutes</li>
-          </ul>
-        </div>
-
-        <div class="card-recipe__ingredients">
-          <div class="card-recipe__ingredients-inner">
-            <h2 class="card-recipe__ingredients-heading">Ingredients</h2>
-            <ul class="card-recipe__ingredients-list">
-              <li class="card-recipe__ingredients-item">2-3 large eggs</li>
-              <li class="card-recipe__ingredients-item">Salt, to taste</li>
-              <li class="card-recipe__ingredients-item">Pepper, to taste</li>
-              <li class="card-recipe__ingredients-item">1 tablespoon of butter or oil</li>
-              <li class="card-recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      <div class="card-recipe__inner">
+        <div class="card-recipe__info">
+          <h1 class="card-recipe__heading">Simple Omelette Recipe</h1>
+          <p class="card-recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+          <div class="card-recipe__time">
+            <h2 class="card-recipe__time-heading">Preparation time</h2>
+            <ul class="card-recipe__time-list">
+              <li class="card-recipe__time-item">Total: Approximately 10 minutes</li>
+              <li class="card-recipe__time-item">Preparation: 5 minutes</li>
+              <li class="card-recipe__time-item">Cooking: 5 minutes</li>
             </ul>
           </div>
-        </div>
-
-        <div class="card-recipe__instructions">
-          <div class="card-recipe__instructions-inner">
-            <h2 class="card-recipe__instructions-heading">Instructions</h2>
-            <ol class="card-recipe__instructions-list">
-              <li class="card-recipe__instructions-item">
-                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</p></li>
-              <li class="card-recipe__instructions-item">
-                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</p></li>
-              <li class="card-recipe__instructions-item">
-                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</p></li>
-              <li class="card-recipe__instructions-item">
-                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</p></li>
-              <li class="card-recipe__instructions-item">
-                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</p></li>
-              <li class="card-recipe__instructions-item">
-                <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</p></li>
-            </ol>
+          <div class="card-recipe__ingredients">
+            <div class="card-recipe__ingredients-inner">
+              <h2 class="card-recipe__ingredients-heading">Ingredients</h2>
+              <ul class="card-recipe__ingredients-list">
+                <li class="card-recipe__ingredients-item">2-3 large eggs</li>
+                <li class="card-recipe__ingredients-item">Salt, to taste</li>
+                <li class="card-recipe__ingredients-item">Pepper, to taste</li>
+                <li class="card-recipe__ingredients-item">1 tablespoon of butter or oil</li>
+                <li class="card-recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card-recipe__instructions">
+            <div class="card-recipe__instructions-inner">
+              <h2 class="card-recipe__instructions-heading">Instructions</h2>
+              <ol class="card-recipe__instructions-list">
+                <li class="card-recipe__instructions-item">
+                  <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</p></li>
+                <li class="card-recipe__instructions-item">
+                  <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</p></li>
+                <li class="card-recipe__instructions-item">
+                  <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</p></li>
+                <li class="card-recipe__instructions-item">
+                  <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</p></li>
+                <li class="card-recipe__instructions-item">
+                  <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</p></li>
+                <li class="card-recipe__instructions-item">
+                  <p class="card-recipe__instructions-text"><span class="card-recipe__instructions-bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</p></li>
+              </ol>
+            </div>
+          </div>
+          <div class="card-recipe__nutrition">
+            <h2 class="card-recipe__nutrition-heading">Nutrition</h2>
+            <p class="card-recipe__nutrition-description">The table below shows nutritional values per serving without the additional fillings.</p>
+            <table class="card-recipe__nutrition-table">
+              <tr class="card-recipe__nutrition-row">
+                <th class="card-recipe__nutrition-title">Calories</th>
+                <td class="card-recipe__nutrition-info">277ckal</td>
+              </tr>
+              <tr class="card-recipe__nutrition-row">
+                <th class="card-recipe__nutrition-title">Carbs</th>
+                <td class="card-recipe__nutrition-info">0g</td>
+              </tr>
+              <tr class="card-recipe__nutrition-row">
+                <th class="card-recipe__nutrition-title">Protein</th>
+                <td class="card-recipe__nutrition-info">20g</td>
+              </tr>
+              <tr class="card-recipe__nutrition-row">
+                <th class="card-recipe__nutrition-title">Fat</th>
+                <td class="card-recipe__nutrition-info">22g</td>
+              </tr>
+            </table>
           </div>
         </div>
-
-        <div class="card-recipe__nutrition">
-          <h2 class="card-recipe__nutrition-heading">Nutrition</h2>
-          <p class="card-recipe__nutrition-description">The table below shows nutritional values per serving without the additional fillings.</p>
-
-          <table class="card-recipe__nutrition-table">
-            <tr class="card-recipe__nutrition-row">
-              <th class="card-recipe__nutrition-title">Calories</th>
-              <td class="card-recipe__nutrition-info">277ckal</td>
-            </tr>
-
-            <tr class="card-recipe__nutrition-row">
-              <th class="card-recipe__nutrition-title">Carbs</th>
-              <td class="card-recipe__nutrition-info">0g</td>
-            </tr>
-
-            <tr class="card-recipe__nutrition-row">
-              <th class="card-recipe__nutrition-title">Protein</th>
-              <td class="card-recipe__nutrition-info">20g</td>
-            </tr>
-
-            <tr class="card-recipe__nutrition-row">
-              <th class="card-recipe__nutrition-title">Fat</th>
-              <td class="card-recipe__nutrition-info">22g</td>
-            </tr>
-          </table>
-        </div>
-
       </div>
   </section>
   <script src="/js/index.js"></script>
